Mahout Change Log

Release 0.9 - unreleased

  MAHOUT-1400: Remove references to deprecated and removed algorithms from examples scripts (ssc)

  MAHOUT-1396: Accidental use of commons-math won't work with next Hadoop 2 release (srowen)

  MAHOUT-1394: Undeprecate Lanczos (ssc)

  MAHOUT-1393: Remove duplicated code from getTopTerms and getTopFeatures in AbstractClusterWriter (Diego Carrion via smarthi)

  MAHOUT-1392: Streaming KMeans should write centroid output to a 'part-r-xxxx' file when executed in sequential mode (smarthi)

  MAHOUT-1390: SVD hangs for certain inputs (tdunning)

  MAHOUT-1389: Complementary Naive Bayes Classifier not getting called when "-c" option is activated (Gouri Shankar Majumdar via smarthi)

  MAHOUT-1384: Executing the MR version of Naive Bayes/CNB of classify_20newgroups.sh fails in seqdirectory step (smarthi)

  MAHOUT-1382: Upgrade Mahout third party jars for 0.9 Release (smarthi)

  MAHOUT-1380: Streaming KMeans fails when executed in Sequential Mode (smarthi)

  MAHOUT-1379: ClusterQualitySummarizer fails with the new T-Digest for clusters with 1 data point (smarthi)

  MAHOUT-1378: Running Random Forest with Ignored features fails when loading feature descriptor from JSON file (Sam Wu via smarthi)

  MAHOUT-1377: Exclude JUnit.jar from tarball (Sergey Svinarchuk via smarthi)

  MAHOUT-1371: Arff loader can misinterpret nominals with integer, real or string (Mansur Iqbal via smarthi)

  MAHOUT-1370: Vectordump doesn't write to output file in MapReduce Mode (smarthi)

  MAHOUT-1368: Convert OnlineSummarizer to use the new TDigest (tdunning)

  MAHOUT-1367: WikipediaXmlSplitter --> Exception in thread "main" java.lang.NullPointerException (smarthi)

  MAHOUT-1364: Upgrade Mahout codebase to Lucene 4.6 (Frank Scholten)

  MAHOUT-1363: Rebase packages in mahout-scala (dlyubimov)

  MAHOUT-1362: Remove examples/bin/build-reuters.sh (smarthi)
